# chill

./: .gitignore  README.org  default.nix  meson.build
include/: builtin.h  cmd.h  env.h  history.h  job.h  lex.h  parser.h  prompt.h  tree.h
src/: builtin.c  cmd.c  env.c  history.c  job.c  lex.c  main.c  parser.c  prompt.c  tree.c
